--- a/Books/pom.xml
+++ b/Books/pom.xml
@@ -72,6 +72,20 @@
 			<version>0.11.5</version>
 		</dependency>
 		
+		
+		<!--NEW-->
+		<dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-cognitoidp</artifactId>
+            <version>1.11.934</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+		<!-- NEW-->
+		
 		<dependency>
          <groupId>com.razorpay</groupId>
          <artifactId>razorpay-java</artifactId>
